--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pissjs",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Has piss function which returns piss",
   "main": "index.js",
   "scripts": {
@@ -14,5 +14,8 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "pissjs": "^1.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dev-John06/pissjs"}
 }
