--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "piss"
+    "piss", "jokes", "fun", "memes", "meme", "useless"
   ],
   "author": "devjohn06",
   "license": "MIT",
