--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "pissjs",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Has piss function which returns piss",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "piss", "jokes", "fun", "memes", "meme", "useless"
+    "piss",
+    "jokes",
+    "fun",
+    "memes",
+    "meme",
+    "useless"
   ],
   "author": "devjohn06",
   "license": "MIT",
